--- a/src/pyqt_UI/learn_activity.ui
+++ b/src/pyqt_UI/learn_activity.ui
@@ -552,9 +552,9 @@
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>70</x>
       <y>0</y>
-      <width>781</width>
+      <width>651</width>
       <height>41</height>
      </rect>
     </property>
@@ -597,6 +597,54 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>0</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>인식률 :</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>0</y>
+      <width>71</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>인식된 텍스트</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <widget class="QLabel" name="label_recognizedText">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>41</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>A</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
    <zorder>groupBox</zorder>
    <zorder>label_camView</zorder>
    <zorder>label_tutorialView</zorder>
@@ -628,6 +676,8 @@
    <zorder>button_Z</zorder>
    <zorder>progressBar</zorder>
    <zorder>label_checkmark</zorder>
+   <zorder>label</zorder>
+   <zorder>groupBox_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
