--- a/src/pyqt_UI/learn_activity.ui
+++ b/src/pyqt_UI/learn_activity.ui
@@ -580,6 +580,9 @@
     <property name="text">
      <string/>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
